Picture Alignment correction

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -52,8 +52,8 @@ header {
     background-image: url("../images/header_bg.png"), url("../images/developer.png");
     background-repeat: no-repeat;
     background-position: bottom right, top left;
-    background-size: 45rem, 5rem;
-    height: 100vh;
+    background-size: 45rem, 5.1rem;
+    /* height: 100vh; */
 }
 
 .banner {
@@ -64,7 +64,7 @@ header {
 }
 
 .banner>img {
-    width: 467px;
+    height: 550px;
     padding-right: 50px;
 }
 
@@ -313,12 +313,11 @@ textarea:focus {
     }
 
     .banner {
-        padding: 20px 20px;
+        padding: 20px 20px 0 20px;
         flex-direction: column;
     }
 
     .banner>img {
-        width: 87.5%;
-        height: 40%;
+        height: 300px;
     }
 }
